2005-05-31    <Jim@LS1>

	* Pervasive restructuring of files to put 3 UIs (spim, xspim,
	PCSpim) in separate directories and cleanup organization and
	makefiles.

2005-02-12    <Jim@LS1>

	* PCSpim:
	Use correct help file in install process.

2005-02-05    <Jim@LS1>

	* scanner.l [Joe Pfeiffer pfeiffer@cs.nmsu.edu]:
	Added work-around for bug in 2.5.31 that left yytext_ptr undefined.

	* exceptions.s [Herman Harrison herman.harrison@utdallas.edu]:
	Restore epilogue code restored $at then used pseduo instructions
	that smashed it.

	* PCSpimView.{cpp,h} 
	Cleared filename when reinitializing simulator, which broke next
	reload command.

2005-01-10    <Jim@LS1>

	* Repackage and rerelease PCSpim_7.1.zip to include mfc71.dll and
	msvc71.dll, which weren't originally included.

2005-01-02    <Jim@LS1>

	* Version 7.1 released.

	* Switched Windows installer to Microsoft .msi installer, instead
	of InstallShield.

	* exceptions.s [Pervin, William J pervin@utdallas.edu]:
	Masked exception code with 4 bit (not 5 bit) mask.

2004-11-27    <Jim@LS1>

	* mem.c inst.h (check_memory_mapped_IO) [Deborah debbiep@csse.monash.edu.au]:
	Clearing the transmitter or receiver interrupt enable bits also
	clear interrupt pending bits in Cause register. Transmitter and
	receiver interrupt enable bits now operate properly (ie prevent
	interrupts when cleared).

2004-11-26    <Jim@LS1>

	* xspim.c (console_input_available) [Daniel Stearns dstearns@csc.calpoly.edu]:
	Code to poll for a console input character in X windows blocked and
	prevented any output until input occured.

2004-11-23    <Jim@LS1>

	* exceptions.s (__excp) [pwhite@mailhaven.com]:
	Correct typos in comments

2004-11-13    <Jim@LS1>

	* op.h [lau@det.ua.pt]:
	Type of "mul" instruction was wrong, which lead to it being
	printed without destination register.

2004-10-19    <Jim@LS1>

	* inst.c (inst_decode):
	Do not printf with format string from user input (comment).

2004-10-18    <Jim@LS1>

	* inst.c (format_an_inst):